--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   </head>
   <body>
     <div class="container"id="new_york">
+      <div class="filter"></div>
     <span>NewYork</span>
     </div>
 
     <div class="container"id="sydney">
+      <div class="filter"></div>
       <span>Sydney</span>
     </div>
 
     <div class="container"id="london">
+      <div class="filter"></div>
         <span>London</span>
     </div>
   </body>
